--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,10 @@
-{}
+{
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "C#",
+            "database": "${workspaceFolder:C#}/API/development.db"
+        }
+    ]
+}
