--- a/Angular/package.json
+++ b/Angular/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "cuid": "^3.0.0",
     "express": "^4.18.2",
     "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^17.0.0",
